# receipten-client

./: .firebaserc  .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
public/: index.html  style.css
src/: lib.rs
src/page/: index.rs
