[package]
name = "receipten-client"
version = "0.1.0"
authors = ["sadness_ojisan <sadness.ojisan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
log = "0.4.6"
wasm-logger = "0.2.0"
serde = "1.0.120"
anyhow = "1.0.38"
yew-router = "0.14.0"
